--- a/css/common.css
+++ b/css/common.css
@@ -1,1 +1,37 @@
+@charset "utf-8";
 
+/* reset */
+* {margin:0; padding:0;}
+li {list-style:none;}
+a {text-decoration:none;}
+
+/* 
+ 게시판 목록 행 단위
+ 목룍 요소 자체를 가운데 정렬하기
+ ul 기본 가로 크기는 100%이므로, 가로 크기를 지정해줘야 가운데로 정렬할 수 있다.
+ 가운데 정렬
+ 번호, 제목, 작성자, 작성일, 조회, 좋아요 와 데이터 정렬
+*/
+
+
+.board_row {
+    width:1000px;
+    border-bottom:solid 1px gray;
+}
+
+/* 게시글 목록 공통 개별 요소 속성 */
+li {
+    border-bottom:solid 1px gray;
+    float:left;
+    text-align:center;
+}
+
+/* 번호, 제목, 작성자, 작성일, 조회, 좋아요 row의 style 설정 */
+.title_row > li {
+    height: 50px;
+    line-height: 50px;
+    background: rgb(233,233,233);
+    font-weight:bold;
+    border-top : solid 2px #000;
+    border-right:solid 1px gray;
+}
