--- a/css/common.css
+++ b/css/common.css
@@ -16,7 +16,7 @@ a {text-decoration:none;}
 
 .board_row {
     width:1000px;
-    border-bottom:solid 1px gray;
+    border-bottom: 1px solid gray;
 }
 
 /* 게시글 목록 공통 개별 요소 속성 */
@@ -32,8 +32,8 @@ li {
     line-height: 50px;
     background: rgb(233,233,233);
     font-weight:bold;
-    border-top : solid 2px #000;
-    border-right:solid 1px gray;
+    border-top : 2px solid #000;
+    border-right: 1px solid gray;
 }
 
 /* 게시글 목록 데이터 개별 요소 속성 */
@@ -41,7 +41,7 @@ li {
     height:40px;
     line-height:40px;
     font-weight:lighter;
-    border-right:solid 1px gray;
+    border-right: 1px solid gray;
 }
 
 /* 요소들의 너비 설정 */
