--- a/css/common.css
+++ b/css/common.css
@@ -11,10 +11,10 @@ a {text-decoration:none;}
     margin: 0 auto;
     box-shadow: 3px 3px 50px #e6e6e6;
     border-radius: 20px;
-    position:relative;
+    position:absolute;
     top : 50%;
     transform:translateY(-50%);
-    -webkit-transform:translateY(-50%);
+    -webkit-transform:transla
 }
 
 .board_header {
